Specify only java.desktop module